--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         </div>
         <div class="es-kv__container">
             <div class="es-kv__photo">
-              <img src="https://drive.google.com/uc?export=view&id=1ST15_mdTLIsK42prHy-6mvCr0ExMIDAP" alt="" class="es-kv__img">
+              <img src="https://drive.google.com/uc?export=view&id=1D6wUjN4vlttkm1WHOQKIZrLnXPfb_CUj" alt="" class="es-kv__img">
             </div>
             <h2 class="es-kv__subtitle">SoColor Sync <br> Pre-Bonded</h2>
-            <p class="es-kv__text"><strong>Koloryzacja ton w ton</strong> z&nbsp;wbudowaną technologią ochronną Pre-Bonded</p>
+            <p class="es-kv__text"><strong>Koloryzacja ton w ton</strong> z&nbsp;wbudowaną technologią ochronną Pre-Bonded.</p>
             <p class="es-kv__text">Ochrona dla każdego włókna włosa, każdej bazy, za każdym razem. 
               Każdy fryzjer może kolorywać z&nbsp;pewnością siebie.</p>
             <a href="https://www.matrixprofessional.pl/assets/pdf/MATRIX-SoColor-2022.pdf"
@@ -93,9 +93,10 @@
                   cera-oil
                     priming complex
                 </strong></li>
-                <li>Oksydanty: <strong>3%-12%</strong></li>
+                <li>Aktywator <strong>2,7%</strong> lub oksydant 3%</li>
                 <li>Proporcje: 1:1</li>
-                <li>Czas trzymania: <strong>35-45 min.</strong></li>
+                <li>Czas trzymania: <strong>10-20 min.</strong></li>
+                <li><strong>Na niektórych włosach może zjaśnieć o 1/2 do 1 poziomu</strong></li>
               </ul>
               <a href="https://hair-shop.pl/pl/menu/farby-do-wlosow-173.html?filter_producer=1308137279"
                 class="es-cross__link es-cross__link--1" target="_blank">Sprawdź</a>
@@ -114,10 +115,10 @@
                   cera-oil
                     priming complex
                 </strong></li>
-                <li>Oksydanty: <strong>6%</strong></li>
+                <li>Aktywator <strong>2,7%</strong> lub oksydant 3%</li>
                 <li>Proporcje: 1:1</li>
-                <li>Czas trzymania: <strong>45 min.</strong></li>
-                <li><strong>Krycie do 100% siwych włosów</strong></li>
+                <li>Czas trzymania: <strong>10-20 min.</strong></li>
+                <li><strong>Absolutny brak przebarwienia koloru bazowego</strong></li>
               </ul>
               <a href="https://hair-shop.pl/pl/menu/farby-do-wlosow-173.html?filter_producer=1308137279"
                 class="es-cross__link es-cross__link--2" target="_blank">Sprawdź</a>
@@ -136,10 +137,10 @@
                   cera-oil
                     priming complex
                 </strong></li>
-                <li>Oksydanty: <strong>9% lub 12%</strong></li>
+                <li>Aktywator <strong>2,7%</strong> lub oksydant 3%</li>
                 <li>Proporcje: 1:1</li>
-                <li>Czas trzymania: <strong>50 min.</strong></li>
-                <li><strong>Rozjaśnienie do 5 poziomów</strong></li>
+                <li>Czas trzymania: <strong>2-5 min.</strong></li>
+                <li><strong>Opracowany z myślą o szybkim tonowaniu i neutralizacji</strong></li>
               </ul>
               <a href="https://hair-shop.pl/pl/menu/farby-do-wlosow-173.html?filter_producer=1308137279"
                 class="es-cross__link es-cross__link--4" target="_blank">Sprawdź</a>
@@ -155,7 +156,7 @@
         <div class="es-complementary__container">
           <div class="es-complementary__single es-complementary__single--1">
             <div class="es-complementary__photo es-complementary__photo--1">
-              <img src="https://drive.google.com/uc?export=view&id=1D6wUjN4vlttkm1WHOQKIZrLnXPfb_CUj" alt="" class="es-complementary__img">
+              <img src="https://drive.google.com/uc?export=view&id=1ST15_mdTLIsK42prHy-6mvCr0ExMIDAP" alt="" class="es-complementary__img">
             </div>
             <h2 class="es-complementary__subtitle">SoColor <br> Pre-Bonded</h2>
             <p class="es-complementary__text"><strong>Koloryzacja trwała</strong> z&nbsp;wbudowaną
