--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Matrix SoColor</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="es-loreal" id="es-loreal">
@@ -250,15 +251,15 @@
       
     </div>
     <script> 
-    function getStyles(href) {
-       var head = document.getElementsByTagName("head")[0];
-      var link = document.createElement("link"); 
-      link.rel = "stylesheet"; link.type = "text/css"; 
-      link.href = href; head.appendChild(link);
-     } document.onreadystatechange = function () 
-     { if (document.readyState === "complete")
-     { getStyles( "https://drive.google.com/uc?export=view&id=1D9bhCbZ4KbUQVPBLkIdelXB68Iiounar" ); 
-     } }; 
+    // function getStyles(href) {
+    //    var head = document.getElementsByTagName("head")[0];
+    //   var link = document.createElement("link"); 
+    //   link.rel = "stylesheet"; link.type = "text/css"; 
+    //   link.href = href; head.appendChild(link);
+    //  } document.onreadystatechange = function () 
+    //  { if (document.readyState === "complete")
+    //  { getStyles( "https://drive.google.com/uc?export=view&id=1D9bhCbZ4KbUQVPBLkIdelXB68Iiounar" ); 
+    //  } }; 
      </script>
   </body>
 </html>
